--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,20 @@
+/* selettori tag principali */
 body {
     box-sizing: border-box;
     margin: 0;
 }
+
+.container{
+    margin-left: 8px;
+}
+
+a {
+    color: rgb(32,169,229);
+    text-decoration: none;
+    font-size: 19px;
+    font-weight: 600;
+}
+
 
 /* background sezione header */
 .headerbg {
@@ -18,3 +31,16 @@ body {
     bottom: 20px;
     left: 10px;
 }    
+
+.title {
+    font-size: 50px;
+    font-weight: 800;
+    margin-top: 25px;
+    margin-bottom: 1px;
+}
+
+.testo1 {
+    color: rgb(128, 128, 128);
+    font-size: 19px;
+    font-weight: 600;
+}
