--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ a {
     color: rgb(32,169,229);
     text-decoration: none;
     font-size: 19px;
-    font-weight: 600;
+    font-weight: 800;
 }
 
 
@@ -42,5 +42,22 @@ a {
 .testo1 {
     color: rgb(128, 128, 128);
     font-size: 19px;
+    font-weight: 800;
+}
+
+.testo2 {
+    color: rgb(128, 128, 128);
+    font-size: 15px;
     font-weight: 600;
+    margin-bottom: 25px;
+}
+
+.image1 {
+    margin: 0;
+    width: 46.7%;
+}
+
+.image2 {
+    margin: 0;
+    width: 40%;
 }
