--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,10 @@ a {
     font-weight: 800;
 }
 
+table {
+    width: 100%;
+}
+
 
 /* background sezione header */
 .headerbg {
@@ -64,4 +68,27 @@ a {
 
 .list1 {
     padding-left: 16px;
+}
+
+
+.table {
+    width: 100%;
+    text-align: left;
+    border-collapse: collapse;
+}
+
+.t1 {
+    color: white;
+    background-color: rgb(32, 169, 229);
+    
+}
+
+.t2 {
+    padding-right: 150px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.tbgc {
+    background-color: rgb(177,229,242);
 }
